--- a/TODO
+++ b/TODO
@@ -7,11 +7,11 @@ V1
      directement des mots (du type "word1=word2")
   OK + créer les mots dans la db
   OK + créer les meanings dans la db
+* OK créer un champs "confidence" pour les links
 *    prendre en compte le cas où un des mots a déjà un meaning
 *    permettre de faire des training (revoir view->trains->new)
-*    générer une vue intermédiaire entre "word1=word2" et l'intégration dans la liste
-     + y proposer les différents meanings
-*    créer un champs "confidence" pour les links
+* OK permettre de supprimer un WordSet
+*    permettre de créer un liste dans une autre liste
 
 OPTIONALS
 ---------
